tests/snapshots/pre_authorized__offer_val.snap
---
source: tests/pre_authorized.rs
assertion_line: 104
expression: vc
---
"@context": []
id: "http://credibil.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
name:
  "@value": Employee ID
  "@language": en-NZ
description:
  "@value": Credibil employee ID credential
  "@language": en-NZ
issuer: "http://credibil.io"
credentialSubject:
  address:
    locality: Wellington
    street_address: 123 Fake St
  email: normal.user@example.com
  family_name: Person
  given_name: Normal
  id: "[id]"
validFrom: "[validFrom]"
