tests/snapshots/pre_authorized__reduce_claims.snap
---
source: tests/pre_authorized.rs
assertion_line: 433
expression: vc
---
"@context": []
id: "http://credibil.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
name:
  "@value": Employee ID
  "@language": en-NZ
description:
  "@value": Credibil employee ID credential
  "@language": en-NZ
issuer: "http://credibil.io"
credentialSubject:
  family_name: Person
  given_name: Normal
  id: "[id]"
validFrom: "[validFrom]"
